tests/baselines/reference/symbolProperty43.errors.txt
symbolProperty43.ts(3,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== symbolProperty43.ts (1 errors) ====
    class C {
        [Symbol.iterator](x: string): string;
        [Symbol.iterator](x: number): number;
        ~~~~~~~~~~~~~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }